--- a/www/styles.css
+++ b/www/styles.css
@@ -1597,7 +1597,7 @@ ul.tags {
   margin-left: 20px; }
   @media (max-width: 767px) {
     ul.tags {
-      margin: 10px 0 0 0; } }
+      margin: 10px 0 0 10px; } }
   ul.tags li {
     border: 1px solid #2c5b7d;
     background: #2c5b7d;
